# Nexa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  err.txt  package-lock.json  package.json  release-please-config.json  terr.txt  test-output2.txt  test2.txt  test3.txt  tfb.txt  tout.txt
.github/skills/ppt-generation/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: chat-done-preview-persistence.spec.ts  chat-evidence-dedup.spec.ts  chat-input-draft-isolation.spec.ts  chat-live-route-status.spec.ts  chat-model-switch-context.spec.ts  chat-new-conversation-stream.spec.ts  chat-persisted-order.spec.ts  chat-persisted-round-replies.spec.ts  chat-persisted-trace-artifact.spec.ts  chat-persisted-turn-trace.spec.ts  chat-scroll-behavior.spec.ts  chat-steering.spec.ts  chat-stream-isolation.spec.ts  chat-stream-keepalive.spec.ts  chat-stream-markdown-throttle.spec.ts  chat-stream-rounds.spec.ts  chat-trace-error-inline.spec.ts  context-usage-persistence.spec.ts  file-preview-agent-edit.spec.ts  playbook-ask-ai-context.spec.ts  playbooks-page-connections.spec.ts  search-ask-ai-scope.spec.ts  settings-provider-models.spec.ts  settings-update-panel.spec.ts  subagent-batch-judge-ui.spec.ts  subagent-ui.spec.ts
apps/desktop/scripts/: tauri-dev-autoport.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  subagent_tool.rs
crates/core/: Cargo.toml
crates/core/assets/skills/doc-script-editor/: SKILL.md
crates/core/assets/skills/doc-script-editor/scripts/: edit_doc.py  requirements.txt
crates/core/assets/skills/docx-document-design/: SKILL.md
crates/core/assets/skills/docx-document-design/references/: docx-playbook.md
crates/core/assets/skills/docx-document-design/scripts/: docx_audit.py
crates/core/assets/skills/office-document-design/: SKILL.md
crates/core/assets/skills/office-document-design/assets/: theme-presets.json
crates/core/assets/skills/office-document-design/references/: docx-playbook.md  pptx-playbook.md  xlsx-playbook.md
crates/core/assets/skills/office-document-design/scripts/: outline-blueprint.md
crates/core/assets/skills/pptx-presentation-design/: SKILL.md
crates/core/assets/skills/pptx-presentation-design/references/: pptx-playbook.md
crates/core/assets/skills/pptx-presentation-design/scripts/: pptx_audit.py
crates/core/assets/skills/xlsx-workbook-design/: SKILL.md
crates/core/assets/skills/xlsx-workbook-design/references/: xlsx-playbook.md
crates/core/assets/skills/xlsx-workbook-design/scripts/: xlsx_audit.py
crates/core/prompts/: .markdownlint.json  compile.md  contradiction_check.md  system.md
crates/core/prompts/tools/: agent_harness_dry_run.json  archive_output.json  compare_documents.json  compile_document.json  create_file.json  desktop_automation.json  edit_document.json  edit_file.json  fetch_url.json  generate_document.json  generate_docx.json  generate_pptx.json  generate_xlsx.json  get_chunk_context.json  get_document_info.json  get_related_concepts.json  get_statistics.json  list_dir.json  list_documents.json  list_sources.json  manage_agent_memory.json  manage_playbook.json  manage_skill.json  manage_source.json  ppt_generate.json  prepare_document_tools.json  query_knowledge_graph.json  read_file.json  read_files.json  record_verification.json  reindex_document.json  retrieve_evidence.json  run_health_check.json  run_shell.json  search_by_date.json  search_knowledge_base.json  search_playbooks.json  search_sessions.json  submit_feedback.json  summarize_document.json  (+4 more)
crates/core/src/: app_settings.rs  approval.rs  behavioral_eval.rs  cache.rs  compile.rs  crypto.rs  db.rs  embed.rs  error.rs  evidence_verifier.rs  evolution.rs  feedback.rs  index.rs  ingest.rs  intelligence.rs  knowledge_graph.rs  knowledge_loop.rs  lib.rs  lint.rs  media.rs  models.rs  ocr.rs  office_runtime.rs  parse.rs  persona.rs  personalization.rs  playbook.rs  privacy.rs  project.rs  project_memory.rs  provider_catalog.rs  search.rs  skills.rs  source_tree.rs  sources.rs  trace.rs  video.rs  watcher.rs  wiki.rs
crates/core/src/agent/: context.rs  mod.rs  scratchpad.rs
crates/core/src/conversation/: memory.rs  mod.rs  summarizer.rs
crates/core/src/llm/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  streaming.rs
crates/core/src/mcp/: client.rs  mod.rs
crates/core/src/migrations/: mod.rs  v001_core_tables.sql  v002_fts5.sql  v003_playbooks.sql  v004_embeddings_feedback.sql  v005_privacy_config.sql  v007_conversations.sql  v008_agent_config_context_window.sql  v010_agent_config_reasoning.sql  v011_message_thinking.sql  v_initial_consolidated.sql
crates/core/src/tools/: agent_memory_tool.rs  archive_output_tool.rs  chunk_context_tool.rs  compare_tool.rs  compile_tool.rs  create_file_tool.rs  date_search_tool.rs  desktop_automation_tool.rs  document_info_tool.rs  document_utils.rs  edit_document_tool.rs  edit_file_tool.rs  fetch_url_tool.rs  file_tool.rs  generate_document_tool.rs  generate_docx_tool.rs  generate_pptx_tool.rs  generate_xlsx_tool.rs  harness_dry_run_tool.rs  health_check_tool.rs  knowledge_graph_tool.rs  list_dir_tool.rs  list_documents_tool.rs  list_sources_tool.rs  manage_skill_tool.rs  manage_source_tool.rs  mcp_tool.rs  mod.rs  path_utils.rs  playbook_tool.rs  ppt_generate_tool.rs  prepare_document_tools_tool.rs  read_files_tool.rs  record_verification_tool.rs  reindex_tool.rs  related_concepts_tool.rs  run_shell_tool.rs  scratchpad_tool.rs  search_playbooks_tool.rs  search_tool.rs  (+6 more)
docs/: I18N_GUIDELINES.md  PRODUCT_DIRECTION.md  README.md  ROADMAP.md  TOOLS.md  UX_QUALITY_BAR.md  design-project-feature.md
scripts/: build-icons.mjs  bump-version.ps1  dedupe-release-changelog.mjs
shared/: provider-presets.json
testdata/sample_vault/docs/: api-notes.txt  (+1 more)
(+159 files in other folders)
