[package]
name = "ask-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
globset = "0.4"
regex = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
