[package]
name = "ask-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
globset = "0.4"
regex = "1"
thiserror = "2"
log = "0.4"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "onig"] }
ndarray = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
notify = { version = "7", features = ["macos_kqueue"] }
dirs = "6"
pdf-extract = "0.10"
dotext = "0.1"
calamine = "0.26"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
