[package]
name = "ask-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
globset = "0.4"
regex = "1"
thiserror = "2"
tracing = "0.1"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "onig"] }
ndarray = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
notify = { version = "7", features = ["macos_kqueue"] }
dirs = "6"
lopdf = "0.38"
dotext = "0.1"
calamine = "0.26"
docx-rs = "0.4"
rust_xlsxwriter = "0.79"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
base64 = "0.22"
aes-gcm = "0.10"
imageproc = { version = "0.25", default-features = false }
encoding_rs = "0.8"
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hound = { version = "3.5", optional = true }
tempfile = { version = "3", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
xz2 = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["ocr"]
ocr = []
video = ["candle-core", "candle-nn", "candle-transformers", "hound", "tempfile", "xz2", "tar"]

[dev-dependencies]
tempfile = "3"
