[package]
name = "ask-myself-desktop"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
ask-core = { path = "../../../crates/core" }
base64 = "0.22"
rusqlite = { version = "0.32" }

[features]
default = ["custom-protocol", "video"]
custom-protocol = ["tauri/custom-protocol"]
video = ["ask-core/video"]
