[package]
name = "nexa-desktop"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
nexa-core = { path = "../../../crates/core" }
base64 = "0.22"
rusqlite = { version = "0.32" }
chrono = { version = "0.4", features = ["clock"] }
blake3 = "1"
encoding_rs = "0.8"

[features]
default = ["custom-protocol", "video"]
custom-protocol = ["tauri/custom-protocol"]
video = ["nexa-core/video"]
